# distributed_systems

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
central-services/: pyproject.toml
central-services/app/: main.py
central-services/app/api/: central.py  inventory.py
central-services/app/auth/: routes.py  utils.py
central-services/app/common/: schemas.py
central-services/app/models/: models.py
central-services/app/service/: inventory.py
central_services/: .coverage  README.md  dockerfile  pyproject.toml
central_services/alembic/: env.py
central_services/alembic/versions/: c557cdfff56c_initial_tables.py  seed_service_credentials.py
central_services/app/: config.py  logging_config.py  main.py  observability.py
central_services/app/api/: central.py  inventory.py
central_services/app/auth/: routes.py  schemas.py  utils.py
central_services/app/common/: models.py  schemas.py
central_services/app/core/: config.py  db.py  dependencies.py
central_services/app/models/: base.py  models.py
central_services/app/routes/: central.py
central_services/app/service/: inventory.py
central_services/app/utils/: exceptions.py  log_config.py  logger_middleware.py
central_services/app/utils/db/: async_database_manager.py  dynamic_filter.py
central_services/app/utils/dependencies/: graphql_fastapi.py
central_services/app/utils/fastapi/: base_url.py  utils.py
central_services/app/utils/fastapi/email/templates/: email_verification.html
central_services/app/utils/middleware/: graphql_context_middlware.py
central_services/tests/: conftest.py
central_services/tests/auth/: test_utils.py
central_services/tests/service/: test_services.py
deploy/: docker-compose.override.yml  docker-compose.yml  prometheus.yml
store-services/: pyproject.toml
store-services/app/: main.py  models.py
store-services/app/api/: store.py
store-services/app/auth/: client.py  dependencies.py
store-services/app/common/: status.py
store-services/app/core/: config.py
store-services/app/services/: sync_service.py
store_services/: .coverage  .prod.env  README.md  dockerfile  pyproject.toml
store_services/alembic/: env.py
store_services/alembic/versions/: 97ca9f85eca2_change_str_to_enum.py
store_services/app/: celery_app.py  celeryconfig.py  logging_config.py  main.py  models.py  observability.py  tasks.py
store_services/app/api/: store.py
store_services/app/auth/: client.py  dependencies.py
store_services/app/celery_tools/celery_tasks/: tasks.py
store_services/app/celery_tools/config/: celery_config.py  celery_utils.py
store_services/app/common/: schemas.py
store_services/app/core/: config.py  db.py
store_services/app/models/: base.py  models.py
store_services/app/services/: api_services.py  sync_service.py  sync_service_db.py
store_services/app/utils/: logger_middleware.py
store_services/app/utils/cache/: redis_cache.py
store_services/app/utils/db/: async_db_conf.py  general.py
store_services/app/utils/db/crud/: entity.py
store_services/app/utils/dependencies/: redis_cache.py
store_services/app/utils/fastapi/email/: email_sender.py
store_services/app/utils/fastapi/email/templates/: change-password.html  reset-password.html  welcome_mail.html
store_services/app/utils/fastapi/observability/: logfire_settings.py  otel.py
store_services/scripts/: populate_inventory.py
store_services/tests/: conftest.py
store_services/tests/api/: test_store.py
store_services/tests/auth/: test_client.py
store_services/tests/services/: test_api_services.py  test_syn_service.py  test_sync_services_db.py
